src/assets/styles/_responsive.scss
@media (min-width: 200px) and (max-width: 470px) {
  .main {
    height: 100svh !important;
    display: flex;
    flex-direction: column;
    align-items: center;
    align-content: center;

    background: url("/backround-image.png");
    background-repeat: no-repeat;

    padding: 0 4.2%;
  }

  .container {
    width: 100%;
  }

  .header {
    height: 33px;
    width: 341px;

    padding-bottom: 110px;
    margin-top: 55px;
  }

  .navigation {
    display: flex;
    flex-direction: column;
    gap: 17px;
  }

  .navigation__list {
    display: none !important;
  }

  .navigation__list > li {
    color: white;
  }

  .navigation__underline {
    border-bottom: 1px solid #fff8f0;
    width: 95.5%;
  }

  /*.main__title {
  text-align: center;
  text-shadow: -5px 9px 4px rgba(0, 0, 0, 0.25);

  font-family: Wadik;
  font-size: 75px;
  font-style: normal;
  font-weight: 700;

  line-height: 119.984%;
  letter-spacing: 7.5px;
  text-transform: uppercase;

  background: linear-gradient(
    7deg,
    rgba(218, 194, 182, 0.83) 5.47%,
    rgba(255, 245, 235, 0.83) 79.53%
  );
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}*/
  .main__title-mobile {
    align-items: center;
    width: 341.38px;
  }

  .main__title {
    display: none;
  }

  .content__main {
    margin-top: 34px;
    display: flex;
    flex-direction: column;
    align-items: center;
    align-content: center;
    gap: 25px;
  }

  #smoke {
    display: none;
  }

  .left__content {
    margin-top: 0px;
    width: 280px;
    height: 169px;

    display: inline-flex;
    flex-direction: column;
    text-align: center;
    gap: 25px;

    z-index: 2;
  }

  .center__content {
    display: none;
  }
  .center__content-mb {
    width: 239px;
    margin-right: 5%;
    img {
      position: absolute;
      bottom: 0px;
    }
  }

  .left__textOne {
    color: #fff5eb;
    text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.5);
    font-family: Roboto;
    font-size: 13px;
    font-style: normal;
    font-weight: normal;
    line-height: 135%;
    letter-spacing: 1.2px;
  }

  .left__textTwo {
    color: #fff8f0;
    text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.5);
    font-family: Roboto;
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: 135%; /* 22.95px */
    letter-spacing: 1.36px;
  }

  .right__content {
    width: 163.72px;
    height: 163.72px;

    z-index: 2;
    a {
      background-image: url("/video-mb.png");
      background-size: cover;
    }
  }

  .btn__play {
    display: none;
  }

  .btn-play__title {
    display: none;
  }

  //about section styles

  .about-us {
    display: flex;
    justify-content: center;
  }

  .about__activity {
    margin-top: 56px;

    width: 335px;
    height: 543px;

    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-rows: 50% 50%;
    row-gap: 34px;
    grid-row-gap: 34px;
  }

  .activity__block {
    img {
      width: 150px;
      height: 150px;
    }
  }

  .activity__description {
    color: #fff8f0;
    text-align: center;

    font-family: Roboto;
    font-size: 16px;
    font-style: normal;
    font-weight: 100;
    line-height: 120%;
    letter-spacing: 0.85px;
  }

  //Team section styles

  .participants {
    height: 700px;
    max-width: 100%;
  }

  .participant__title {
    height: 112px;

    margin-top: 80px;
    margin-left: 27px;

    display: flex;
    flex-direction: column;
    gap: 30px;

    .partic__titleOne {
      color: #d8c3ad;

      font-family: Wadik;
      font-size: 30px;
      font-style: normal;
      font-weight: bolder;
      line-height: 0%;
      letter-spacing: 2.5px;
    }

    .partic__titleTwo {
      color: #2c2c2c;
      -webkit-text-stroke: 1px #d8c3ad;

      font-family: Wadik;
      font-size: 30px;
      font-style: normal;
      font-weight: bolder;
      line-height: 0%;
      letter-spacing: 2.5px;
    }
  }

  .news {
    height: 724px;
  }

  .news__titles {
    width: 390px;
    height: 112px;

    margin-top: 70px;

    display: flex;
    flex-direction: column;
    gap: 50px;
    text-align: center;

    .news__titleOne {
      color: #2c2c2c;
      -webkit-text-stroke: 1px #d8c3ad;

      font-family: Wadik;
      font-size: 30px;
      font-style: normal;
      font-weight: bolder;
      line-height: 0%;
      letter-spacing: 2.5px;
    }
    .news__titleTwo {
      color: #d8c3ad;

      font-family: Wadik;
      font-size: 30px;
      font-style: normal;
      font-weight: bolder;
      line-height: 0%;
      letter-spacing: 5%;
    }
  }

  .news__banner {
    height: 463px;
    position: absolute;
    z-index: -1;
    width: 100%;
  }

  .news__content {
    display: flex;
    flex-direction: column;
  }

  .news__cards {
    display: none;
    margin-top: 70px;

    display: flex;
    flex-direction: row;
    gap: 100px;
  }

  .new__card {
    display: none;
    height: 420px;
    width: 370px;
    background: #272727;
    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.25);
  }

  .news__card-img {
    background: url("/newcardnohover1.png"), no-repeat;
    height: 210px;

    display: flex;
    justify-content: center;
    align-items: center;
  }

  .new__btn {
    display: none;
  }

  .news__card-img:hover {
    background: url("/newcardnohover1.png"), no-repeat;
    .new__btn {
      display: flex;

      width: 90px;
      height: 34px;

      border: 1px;
      border-radius: 1px;
      background: #d8c3ad;
      color: #282828;

      align-items: center;
      justify-content: center;
      padding: 3px 11px;

      cursor: pointer;
    }
  }

  .new-card__content {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 15px;

    margin: 38.5px 12.5px 49.5px 11px;

    .new-card__title {
      color: #fff8f0;
      font-family: Roboto;
      font-size: 20px;
      font-style: normal;
      font-weight: 400;
      line-height: 130%;
      letter-spacing: 1px;
    }

    .new-card__description {
      color: rgba(255, 248, 240, 0.8);
      font-family: Roboto;
      font-size: 15px;
      font-style: normal;
      font-weight: 300;
      line-height: normal;
      letter-spacing: 0.75px;
    }
  }

  .btn__fullnews {
    display: none;
    margin-left: 1018px;
    margin-top: 65.3px;

    display: flex;
    flex-direction: column;
    gap: 10px;

    .fullnews__title {
      color: #d8c3ad;

      font-family: Roboto;
      font-size: 17px;
      font-style: normal;
      font-weight: 500;
      line-height: 130%;
      letter-spacing: 0.85px;
    }

    .fullnews__arrow {
      margin-left: 68%;
    }
  }

  .exhibition {
    display: none;
    height: 100vh;
  }

  .ex__cardbackground {
    max-width: 1214px;

    height: 604px;

    background: linear-gradient(
      107deg,
      rgba(255, 255, 255, 0.04) 2.07%,
      rgba(255, 255, 255, 0.01) 55.58%
    );
    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.2);
    backdrop-filter: blur(25px);
  }

  .exhibition__card {
    width: 1214px;

    margin-top: 220px;

    height: 604px;

    border-radius: 5px;
    border: 1px solid rgba(255, 255, 255, 0.4);
  }

  .exhibition__title {
    width: 486px;
    height: 112px;

    display: flex;
    flex-direction: column;

    margin: 60px 0 0 96px;

    .ex-title__textOne {
      color: #d8c3ad;

      font-family: Wadik;
      font-size: 50px;
      font-style: normal;
      font-weight: 700;
    }

    .ex-title__textTwo {
      color: #2c2c2c;
      -webkit-text-stroke: 1px #d8c3ad;

      font-family: Wadik;
      font-size: 50px;
      font-style: normal;
      font-weight: 700;
    }
  }

  .exhibition__content {
    display: flex;
    flex-direction: row;
    gap: 30px;
    .ex-content__left {
      margin-left: 96px;
      margin-top: 15px;
    }
  }

  .ex-content__right {
    display: flex;
    flex-direction: column;
    gap: 60px;

    width: 556px;

    margin-top: 60px;

    .ex__text {
      color: #fff8f0;
      font-family: Roboto;
      font-size: 17px;
      font-weight: 300;
      line-height: 130%;
      letter-spacing: 5%;
      text-align: left;
    }
  }

  .bottom__content {
    display: flex;
    flex-direction: row;
    gap: 78px;
    .ex__btn {
      width: 242px;
      height: 60px;
      background: #d8c3ad;
      border: 1px solid #d8c3ad;
      border-radius: 5px;

      color: #1f1f1f;
      font-family: Roboto;
      font-size: 14px;
      font-weight: 500;
      letter-spacing: 1.5px;
    }

    .fullex__btn-text {
      border: none;
      background: none;

      color: white;
    }
  }

  .gallery {
    height: 380px;
    max-width: 1920px;
    background: url("/gallery-photo.png");
    background-size: cover;
    background-repeat: no-repeat;

    display: none;

    .fullgl__btn {
      color: #d8c3ad;
      margin-left: 70%;

      font-family: Roboto;
      font-size: 17px;
      font-style: normal;
      font-weight: 500;
      line-height: 130%;
      letter-spacing: 0.85px;
    }

    .fullgl__arrow {
      margin-top: 5px;
      margin-left: 79%;
    }
  }

  .investors {
    height: 407px;

    margin-top: 95px;
    margin-bottom: 104px;
  }

  .investors__card-content {
    max-width: 1240px;
    height: 407px;
    padding: 104px 58px 84px 59px;
  }

  .investors__cards {
    height: 220px;
    display: flex;
    flex-direction: row;
    gap: 60px;
    .invest__card {
      background-color: #333333;

      width: 200px;
      height: 220px;
    }
  }

  .footer {
    background-color: #1c1c1c;
  }

  .footer__menu {
    display: none;
  }

  .footer_container {
    color: white;

    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    gap: 0px 0px;
    grid-template-areas:
      "title numbers"
      "email email";
    align-items: center;
    align-content: center;
    text-align: center;
  }

  .footer__social {
    grid-area: email;
  }

  .footer__title-container {
    margin: 29px 0;
    color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 25px;
    .footer__title {
      width: 135px;
      font-family: "Wadik";
      font-weight: 700;
      font-size: 15px;
    }

    .footer__date {
      font-family: Roboto;
      font-weight: 400;
    }
  }

  .footer__numbers {
    font-family: Roboto;
    ul {
      display: flex;
      flex-direction: column;
      gap: 15px;
      list-style: none;
      color: white;
    }
  }

  .footer__social {
    font-family: Roboto;
    display: flex;
    flex-direction: column;
    gap: 12px;
    color: white;
  }
}

@media (max-width: 1400px) {
  .about__activity {
    gap: 10px;
  }

  .btn__fullnews {
    display: none;
    margin-left: 930px;
    margin-top: 65.3px;

    display: flex;
    flex-direction: column;
    gap: 10px;

    .fullnews__title {
      color: #d8c3ad;

      font-family: Roboto;
      font-size: 17px;
      font-style: normal;
      font-weight: 500;
      line-height: 130%;
      letter-spacing: 0.85px;
    }

    .fullnews__arrow {
      margin-left: 140px;
    }
  }
}

@media (min-width: 1000px) {
}

